fix design principles footer margin too large. https://standards.usa.gov/design-principles/

--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -1204,7 +1204,7 @@ $font-light: 300;
 
 .page-design-principles {
   @include media($medium-screen) {
-    .usa-grid-full {
+    .main-content .usa-grid-full {
       @include margin(4rem null 3rem null);
     }
   }
